fixed chatbox spacing

--- a/css/quiet.css
+++ b/css/quiet.css
@@ -1942,7 +1942,8 @@ background: var(--tertiary-color) !important;
 
 .chat .textArea-2Spzkt {
   background-color: transparent !important;
-  line-height: 2em !important;
+  line-height: 1.25rem !important;
+  margin-top: 0.50em;
 }
 
 .chat .textArea-2Spzkt.textAreaEnabledNoAttach-1WxUwj {
